# h1r_music

./: LICENSE  README.md  app.py  main.py  pyproject.toml  record-sound.py  requirements.txt  v2m.py
audio_tools/: midi_to_wav.py  mixer.py
midi/: output1.mid
