[project]
name = "h1r-music"
version = "0.1.0"
description = ""
authors = [
    {name = "MUSIC"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "soundfile (>=0.13.1,<0.14.0)",
    "sounddevice (>=0.5.2,<0.6.0)",
    "pretty-midi (>=0.2.11,<0.3.0)",
    "flask (>=3.1.2,<4.0.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "mido (>=1.3.3,<2.0.0)",
    "flask-cors (>=6.0.1,<7.0.0)",
    "pyfluidsynth (>=1.3.4,<2.0.0)"
]
[tool.poetry]
package-mode = false
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
